--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -3,7 +3,7 @@ body{
 }
 .grid{
     background-color: rgba(255, 255, 255, 0);
-    margin: 50px auto;
+    margin: 25px auto;
     vertical-align: center;
     width: 400px;
     height: 400px;
@@ -33,15 +33,24 @@ body{
     align-items: center;
     margin-top: 2rem;
 }
+.flex2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
 .header{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 35px;
     color: white;
     text-align: center;
 }
-.p1, .p2, .reset{
+.p1, .p2, .reset, #empate{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+}
+#empate{
+    color: white;
 }
 .p1{
     color: blue;
@@ -53,18 +62,17 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
 .reset{
     font-weight: bolder;
     color: green;
     background-color: white;
-    margin: 1rem;
     border: 1px solid green;
 }
 .reset:hover{
     color: white;
     background-color: green;
-    margin: 1rem;
     border: 1px solid white;
 }
 .x, .o{
@@ -79,4 +87,7 @@ body{
    
 .o{
      color: red;
+}
+.oculto{
+    display: none;
 }
