--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -33,12 +33,6 @@ body{
     align-items: center;
     margin-top: 2rem;
 }
-.flex2{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
 .header{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 35px;
@@ -53,7 +47,7 @@ body{
     color: white;
 }
 .p1{
-    color: blue;
+    color: #0000ff;
     display: inline;
 }
 .p2{
